--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                     <div class="d-flex flex-column">
                         <img class="img-fluid w-75 align-self-end" src="img/about.jpg" alt="">
                         <div class="w-50 bg-secondary p-5" style="margin-top: -25%;">
-                            <h1 class="text-uppercase text-primary mb-3">25 Years</h1>
+                            <h1 class="text-uppercase text-primary mb-3">Island wide</h1>
                             <h2 class="text-uppercase mb-0">Experience</h2>
                         </div>
                     </div>
