--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                         <img class="img-fluid w-75 align-self-end" src="img/about.jpg" alt="">
                         <div class="w-50 bg-secondary p-5" style="margin-top: -25%;">
                             <h1 class="text-uppercase text-primary mb-3">Island wide</h1>
-                            <h2 class="text-uppercase mb-0">Experience</h2>
+                            <h4 class="text-uppercase mb-0">Doorstep delivary availble</h4>
                         </div>
                     </div>
                 </div>
