--- a/index.html
+++ b/index.html
@@ -54,19 +54,10 @@
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu m-0">
-                        <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                        <a href="team.html" class="dropdown-item">Our Barber</a>
-                        <a href="open.html" class="dropdown-item">Working Hours</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
-                </div>
+                <a href="team.html" class="nav-item nav-link">Shop</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="team.html" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Shop Now<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -90,8 +81,8 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
                         <div class="mx-sm-5 px-5" style="max-width: 900px;">
-                            <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">Innovative.Reliable.Global</h1>
-                            <h4 class="text-white text-uppercase mb-4 animated slideInDown">Discover the future of tech with us today!</h4>
+                            <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">Innovative</h1>
+                            <h4 class="text-white text-uppercase mb-4 animated slideInDown">Discover the future with us today!</h4>
                             <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-phone-alt text-primary me-3"></i>+94 72 647 2827</h4>
                         </div>
                     </div>
@@ -118,8 +109,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="d-flex flex-column">
-                        <img class="img-fluid w-75 align-self-end" src="img/about.jpg" alt="">
-                        <div class="w-50 bg-secondary p-5" style="margin-top: -25%;">
+                        <img class="img-fluid w-75 align-self-end" src="" alt="">
+                        <div class="w-55 bg-secondary p-5" style="margin-top: -25%;">
                             <h2 class="text-uppercase text-primary mb-3">Express</h2>
                             <h4 class="text-uppercase mb-0">doorstep delivery</h4>
                         </div>
@@ -132,70 +123,60 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <a href="team.html"> <p class="d-inline-block bg-secondary text-primary py-1 px-4">Shop now</p> <a/>
-                <h1 class="text-uppercase">Big Savings, Bigger Smiles – Shop Now!</h1>
+                <h1 class="text-uppercase">Big Savings, Bigger Smiles Shop Now!</h1>
             </div>
             <div class="row g-4">
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-2 col-md-5 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
                         <div class="team-img position-relative overflow-hidden">
                             <img class="img-fluid" src="img/team-1.jpg" alt="">
                             <div class="team-social">
-                                <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-square" href="open.html"><i class="fa fa-shopping-cart"></i></a>
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
-                            <span class="text-primary">Designation</span>
+                            <h5 class="text-uppercase">Product Name</h5>
+                            <span class="text-primary">Details</span>
+                        </div>
+                    </div>
+                </div><div class="col-lg-2 col-md-5 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="team-item">
+                        <div class="team-img position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <div class="team-social">
+                                <a class="btn btn-square" href="open.html"><i class="fa fa-shopping-cart"></i></a>
+                            </div>
+                        </div>
+                        <div class="bg-secondary text-center p-4">
+                            <h5 class="text-uppercase">Product Name</h5>
+                            <span class="text-primary">Details</span>
+                        </div>
+                    </div>
+                </div><div class="col-lg-2 col-md-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item">
+                        <div class="team-img position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <div class="team-social">
+                                <a class="btn btn-square" href="open.html"><i class="fa fa-shopping-cart"></i></a>
+                            </div>
+                        </div>
+                        <div class="bg-secondary text-center p-4">
+                            <h5 class="text-uppercase">Product Name</h5>
+                            <span class="text-primary">Details</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-2 col-md-5 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="team-item">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/team-2.jpg" alt="">
+                            <img class="img-fluid" src="img/team-1.jpg" alt="">
                             <div class="team-social">
-                                <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-square" href="open.html"><i class="fa fa-shopping-cart"></i></a>
                             </div>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
-                            <span class="text-primary">Designation</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="team-item">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/team-3.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
-                            <span class="text-primary">Designation</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="team-item">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/team-4.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h5 class="text-uppercase">Barber Name</h5>
-                            <span class="text-primary">Designation</span>
+                            <h5 class="text-uppercase">Product Name</h5>
+                            <span class="text-primary">Details</span>
                         </div>
                     </div>
                 </div>
@@ -205,75 +186,29 @@
     <!-- Team End -->
 
 
-    <!-- Working Hours Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-0">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="h-100">
-                        <img class="img-fluid h-100" src="img/open.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="bg-secondary h-100 d-flex flex-column justify-content-center p-5">
-                        <p class="d-inline-flex bg-dark text-primary py-1 px-4 me-auto">Working Hours</p>
-                        <h1 class="text-uppercase mb-4">Professional Barbers Are Waiting For You</h1>
-                        <div>
-                            <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Monday</h6>
-                                <span class="text-uppercase">09 AM - 09 PM</span>
-                            </div>
-                            <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Tuesday</h6>
-                                <span class="text-uppercase">09 AM - 09 PM</span>
-                            </div>
-                            <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Wednesday</h6>
-                                <span class="text-uppercase">09 AM - 09 PM</span>
-                            </div>
-                            <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Thursday</h6>
-                                <span class="text-uppercase">09 AM - 09 PM</span>
-                            </div>
-                            <div class="d-flex justify-content-between border-bottom py-2">
-                                <h6 class="text-uppercase mb-0">Friday</h6>
-                                <span class="text-uppercase">09 AM - 09 PM</span>
-                            </div>
-                            <div class="d-flex justify-content-between py-2">
-                                <h6 class="text-uppercase mb-0">Sat / Sun</h6>
-                                <span class="text-uppercase text-primary">Closed</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Working Hours End -->
-
 
     <!-- Testimonial Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block bg-secondary text-primary py-1 px-4">Testimonial</p>
-                <h1 class="text-uppercase">What Our Clients Say!</h1>
+                <h1 class="text-uppercase">What Yunoxa Say!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-1.jpg' alt=''>">
-                    <h4 class="text-uppercase">Client Name</h4>
-                    <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
+                    <h4 class="text-uppercase">About</h4>
+                    <p class="text-primary"> YUNOXA</p>
+                    <span class="fs-5">Yunoxa is your one-stop online shop for top-notch electronics and more. Offering a vast array of products, from cutting-edge gadgets to everyday essentials, Yunoxa ensures quality and convenience. Whether you're looking for the latest smartphone or home appliances, Yunoxa has it all, with worldwide delivery to bring your purchases right to your doorstep.</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
-                    <h4 class="text-uppercase">Client Name</h4>
-                    <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
+                    <h4 class="text-uppercase">About</h4>
+                    <p class="text-primary"> YUNOXA</p>
+                    <span class="fs-5">Looking for a reliable store for all your electronics and lifestyle needs? Look no further than Yunoxa. With a comprehensive selection of popular brand electronics and a diverse catalog of products, Yunoxa guarantees an exceptional shopping experience. Fast, secure shipping to customers worldwide makes it easier than ever to access premium tech, no matter where you are.</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>">
-                    <h4 class="text-uppercase">Client Name</h4>
-                    <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
+                    <h4 class="text-uppercase">About</h4>
+                    <p class="text-primary"> YUNOXA</p>
+                    <span class="fs-5">At Yunoxa, we believe in making technology and modern living accessible for everyone. From cutting-edge electronics to everyday essentials, our store features a wide range of top-quality products from well-known brands. Plus, we offer worldwide shipping to ensure that wherever you are, you're never too far from the latest innovations.</span>
                 </div>
             </div>      
         </div>
@@ -310,29 +245,15 @@
                     <h4 class="text-uppercase mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="upload.html">Support</a>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="position-relative mb-4">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                    <div class="d-flex pt-1 m-n1">
-                        <a class="btn btn-lg-square btn-dark text-primary m-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg-square btn-dark text-primary m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg-square btn-dark text-primary m-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-lg-square btn-dark text-primary m-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
+                
             </div>
         </div>
         <div class="container">
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">YUNOXA</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
