--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block bg-secondary text-primary py-1 px-4">Testimonial</p>
+                <p class="d-inline-block bg-secondary text-primary py-1 px-4"><a href="team.html">Go to Store</a></p>
                 <h1 class="text-uppercase">What Yunoxa Say!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
