--- a/open.html
+++ b/open.html
@@ -44,7 +44,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="mb-0 text-primary text-uppercase"><i class="fa fa-cut me-3"></i>HairCut</h1>
+            <h1 class="mb-0 text-primary text-uppercase"><i class=""></i>Yunoxa</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -53,20 +53,10 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu m-0">
-                        <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                        <a href="team.html" class="dropdown-item">Our Barber</a>
-                        <a href="open.html" class="dropdown-item active">Working Hours</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
-                </div>
+                <a href="team.html" class="nav-item nav-link">Shop</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="team.html" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Shop Now<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -75,12 +65,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-3 text-white text-uppercase mb-3 animated slideInDown">Working Hours</h1>
+            <h1 class="display-3 text-white text-uppercase mb-3 animated slideInDown">Product Overview</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Working Hours</li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">Store</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">Product Overview</li>
                 </ol>
             </nav>
         </div>
@@ -99,7 +89,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="bg-secondary h-100 d-flex flex-column justify-content-center p-5">
-                        <p class="d-inline-flex bg-dark text-primary py-1 px-4 me-auto">Working Hours</p>
+                        <p></p>
                         <h1 class="text-uppercase mb-4">Yunoxa Product title</h1>
                         <div>
                             <div class="d-flex justify-content-between border-bottom py-2">
@@ -111,7 +101,7 @@
                                 <span class="text-uppercase">20 000/=</span>
                             </div>
                             <div class="d-flex justify-content-between py-2">
-                                <span class="text-uppercase text-primary">BUY NOW</span>
+                                <span class="d-inline-flex bg-dark text-primary py-1 px-4 me-auto" class="text-uppercase text-primary"><a href="https://wa.me/+94726472827?text=Product%20order%20(Product%20ID%20-%20%3C000001%3E)">BUY NOW</a></span>
                             </div>
                         </div>
                     </div>
@@ -151,9 +141,7 @@
                     <h4 class="text-uppercase mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="">Our Services</a>            
                 </div>
                 
             </div>
