--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
                 <a href="team.html" class="nav-item nav-link">Shop</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
@@ -243,8 +242,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-uppercase mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="team.html">Store</a>
                 </div>
                 
             </div>
