--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="img/ICON.ico">
+
 </head>
 
 <body>
