--- a/addlistings.html
+++ b/addlistings.html
@@ -12,6 +12,16 @@
     </style>
 </head>
 <body>
+    <form id="addProductForm">
+        <input type="text" id="productName" placeholder="Product Name" required>
+        <input type="text" id="productDetails" placeholder="Product Details" required>
+        <input type="url" id="productImage" placeholder="Image URL" required>
+        <input type="number" id="productPrice" placeholder="Price" required>
+        <button type="submit">Add Product</button>
+    </form>
+    
+    <script src="addProduct.js"></script> <!-- Link to JavaScript -->
+    
 
     <h2>Add Product</h2>
     <form id="productForm">
