--- a/team.html
+++ b/team.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+    
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
@@ -74,6 +75,13 @@
     <!-- Page Header End -->
 
     <!-- Team Start -->
+
+    <div id="productsContainer"></div>
+
+<script src="fetchProducts.js"></script> <!-- JavaScript file to load products -->
+
+
+
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
