--- a/addlistings.html
+++ b/addlistings.html
@@ -10,6 +10,8 @@
         .product-list { display: flex; flex-wrap: wrap; gap: 20px; }
         .col-lg-2 { width: 200px; }
     </style>
+<script type="module" src="addProduct.js"></script> <!-- Link to JavaScript -->
+
 </head>
 <body>
     <form id="addProductForm">
@@ -20,7 +22,7 @@
         <button type="submit">Add Product</button>
     </form>
     
-    <script src="addProduct.js"></script> <!-- Link to JavaScript -->
+    <script type="module" src="addProduct.js"></script> <!-- Link to JavaScript -->
     
 
     <h2>Add Product</h2>
