--- a/open.html
+++ b/open.html
@@ -63,6 +63,31 @@
 
 
     <!-- Page Header Start -->
+
+    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+        <div class="bg-secondary h-100 d-flex flex-column justify-content-center p-5">
+            <p></p>
+            <h1 id="productTitle" class="text-uppercase mb-4"></h1>
+            <div>
+                <div class="d-flex justify-content-between border-bottom py-2">
+                    <h6 class="text-uppercase mb-0" id="productDescription"></h6>
+                </div><br>
+                <div class="d-flex justify-content-between border-bottom py-2">
+                    <h6 class="text-uppercase mb-0">Price</h6>
+                    <span id="productPrice" class="text-uppercase"></span>
+                </div>
+                <div class="d-flex justify-content-between py-2">
+                    <span class="d-inline-flex bg-dark text-primary py-1 px-4 me-auto" class="text-uppercase text-primary">
+                        <a href="#" id="buyNowLink">BUY NOW</a>
+                        <a href="open.html?productId=123">View Details</a>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
             <h1 class="display-3 text-white text-uppercase mb-3 animated slideInDown">Product Overview</h1>
