--- a/test/shop/online-shop-website-template/create.html
+++ b/test/shop/online-shop-website-template/create.html
@@ -13,7 +13,7 @@
 <body>
     <div class="page create">
         <form id="productForm">
-            <label for="name">Title</label>
+            <label for="name"><b>Title</b></label>
             <input type="text" id="name">
             
             <label for="details">Details</label>
