--- a/test/shop/online-shop-website-template/shop.html
+++ b/test/shop/online-shop-website-template/shop.html
@@ -24,6 +24,80 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <script type="module">
+        import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
+
+        // Initialize Supabase client
+        const supabaseUrl = 'https://qopdjgfciakmvhlriixt.supabase.co';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFvcGRqZ2ZjaWFrbXZobHJpaXh0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk0NDA2NDAsImV4cCI6MjA1NTAxNjY0MH0.5UAelwww7WpDUExqhc5dH2JhUWlGNgUNjh8fzxPNZvs';
+        const supabase = createClient(supabaseUrl, supabaseKey);
+
+        function generateStarRating() {
+            let rating = (Math.random() * (5 - 3.7) + 3.7).toFixed(1); // Random between 3.7 - 5.0
+            let fullStars = Math.floor(rating);
+            let halfStar = rating - fullStars >= 0.5 ? 1 : 0;
+            let emptyStars = 5 - (fullStars + halfStar);
+
+            let starHtml = '';
+            for (let i = 0; i < fullStars; i++) {
+                starHtml += `<small class="fa fa-star mr-1"></small>`;
+            }
+            if (halfStar) {
+                starHtml += `<small class="fa fa-star-half-alt mr-1"></small>`;
+            }
+            for (let i = 0; i < emptyStars; i++) {
+                starHtml += `<small class="far fa-star mr-1" style="color: #FFD700;"></small>`;
+            }
+            
+            return { starHtml, rating };
+        }
+
+        async function fetchProducts() {
+            const { data, error } = await supabase.from('products').select('*');
+
+            if (error) {
+                console.error('Error fetching data:', error);
+                return;
+            }
+
+            const productsContainer = document.getElementById('products');
+            productsContainer.innerHTML = '';
+
+            data.forEach(product => {
+                const imageUrl = product.image ? product.image : 'https://via.placeholder.com/250';
+                const { starHtml, rating } = generateStarRating();
+
+                const productElement = document.createElement('div');
+                productElement.classList.add('col-lg-4', 'col-md-6', 'col-sm-6', 'pb-1');
+
+                productElement.innerHTML = `
+                    <div class="product-item mb-4">
+                        <div class="product-img position-relative overflow-hidden">
+                            <img class="img-fluid w-100" src="${imageUrl}" alt="${product.name}">
+                            <div class="product-action">
+                                <a class="btn btn-outline-dark btn-square" href="#"><i class="fa fa-shopping-cart"></i></a>
+                                <a class="btn btn-outline-dark btn-square" href="#"><i class="far fa-heart"></i></a>
+                                <a class="btn btn-outline-dark btn-square" href="#"><i class="fa fa-sync-alt"></i></a>
+                                <a class="btn btn-outline-dark btn-square" href="#"><i class="fa fa-search"></i></a>
+                            </div>
+                        </div>
+                        <div class="text-center py-4">
+                            <a class="h6 text-decoration-none text-truncate" href="#">${product.name}</a>
+                            <div class="d-flex align-items-center justify-content-center mt-2">
+                                <h5>$${product.price}</h5>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center mb-1">
+                                ${starHtml} <small>(${rating})</small>
+                            </div>
+                        </div>
+                    </div>
+                `;
+                productsContainer.appendChild(productElement);
+            });
+        }
+
+        window.onload = fetchProducts;
+    </script>  
 </head>
 
 <body>
@@ -341,6 +415,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="container-fluid">
+                        <div class="row px-xl-5">
+                            <div class="col-lg-9 col-md-8">
+                                <div class="row pb-3" id="products">
+                                    Loading products...
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
